[package]
name = "staticmap"
version = "0.3.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2018"
description = "Tile based static map image renderer."
documentation = "https://docs.rs/staticmap"
repository = "https://github.com/danielalvsaaker/staticmap"
readme = "README.md"
license = "MIT"
categories = ["multimedia::images"]
keywords = ["openstreetmap", "osm", "map"]

[dependencies]
attohttpc = { version = "0.16", default-features = false, features = ["tls-rustls"] }
derive_builder = "0.9"
png = { version = "0.16", default-features = false }
rayon = "1.5"
tiny-skia = "0.5"
