[package]
name = "staticmap"
version = "0.4.2"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2018"
description = "Tile based static map image renderer."
documentation = "https://docs.rs/staticmap"
repository = "https://github.com/danielalvsaaker/staticmap"
readme = "README.md"
license = "MIT"
categories = ["multimedia::images"]
keywords = ["openstreetmap", "osm", "map"]

[dependencies]
attohttpc = { version = "0.27", default-features = false, features = [
    "tls-rustls",
], optional = true }
png = { version = "0.17", default-features = false }
rayon = { version = "1.5", optional = true }
tiny-skia = "0.11"

[features]
default = ["default-tile-fetcher"]
default-tile-fetcher = ["attohttpc", "rayon"]
